# technicalmc.xyz

./: .gitignore  README.md  database.sh  tags.json  tmc-wiki-pod.yaml
api/: .env.example  .gitignore  Cargo.toml  README.md  Rocket.toml  diesel.toml  start_podman.sh
api/migrations/2021-02-19-201454_create_articles/: down.sql  up.sql
api/migrations/2021-03-02-162826_full_text/: down.sql  up.sql
api/src/: Dockerfile  config.rs  database.rs  git.rs  handlers.rs  lib.rs  responses.rs  schema.rs  utils.rs  webhooks.rs
api/src/api/: articles.rs  auth.rs  message_builder.rs  mod.rs  status.rs  users.rs
api/src/models/: article_models.rs  mod.rs  user_models.rs
api/src/validation/: article_validation.rs  mod.rs
api/tests/: users.rs
web/: .eslintrc  .gitignore  .prettierignore  Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.json
web/.github/workflows/: main.yml
web/src/: types.tsx
web/src/components/: Alert.tsx  Loader.tsx  Search.tsx  Tag.tsx  TagSelector.tsx  UserRankBade.tsx
web/src/components/Article/: FailedPost.tsx
web/src/components/Articles/: Buttons.tsx  FeaturedArticles.tsx  Requests.tsx
web/src/components/Editor/: ArticleEditor.tsx  ArticleToolbar.tsx  DynamicLoadedEditor.tsx  EditorConfig.tsx  autoformatRules.ts  pluginOptions.ts
web/src/components/Structure/: Footer.tsx  Layout.tsx  (+5 more)
web/src/ga/: gtag.ts
web/src/hooks/: use-dark-mode.ts
web/src/pages/: 404.tsx  _app.tsx  _document.tsx  about.tsx  archive.tsx  articles.tsx  contact.tsx  faq.tsx  help.tsx  index.tsx  style-guide.tsx
web/src/styles/: global.css
(+12 files in other folders)
